# STree

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  README.md
.github/: CODEOWNERS
.github/workflows/: job.yaml
Binary_Search_Tree/: CMakeLists.txt  readme.md
Binary_Search_Tree/deletion/: CMakeLists.txt  case1.cpp  case2.cpp  deleteNode.cpp  readme.md
Binary_Search_Tree/floor_and_ceil/: ceil.cpp  floor.cpp
Binary_Search_Tree/insertion/: CMakeLists.txt  insert.cpp
Binary_Search_Tree/log/: 29_april_2026.cpp  29_april_2026_V2.cpp
Binary_Search_Tree/maximum_minimum/: maximum_tre.cpp  minimum_tree.cpp
Binary_Search_Tree/search/: CMakeLists.txt
Binary_Search_Tree/succesor_predecessor/: predecessor.cpp  succesor.cpp
Binary_Tree/: Binary_trer_fundamental.cpp  CMakeLists.txt  binary_treeMain  readme.md
Binary_Tree/Binart_Search_Tree/: readme.md
Binary_Tree/depth_&_height/: CMakeLists.txt  use_bfs  use_bfs.cpp  use_rekursif  use_rekursif.cpp
Binary_Tree/insertion/: CMakeLists.txt  automatic_insertion.cpp  insertion_demo  insertion_tree.cpp
Binary_Tree/mini_project/: CMakeLists.txt  main.cpp  (+1 more)
Binary_Tree/traversal/deep_first/: CMakeLists.txt  Iteratif_Preorder  Iteratif_Preorder.cpp  iteratif_inorder  iteratif_inorder.cpp  iteratif_postorder  iteratif_postorder.cpp  morris_traversal.cpp  postorder.cpp  rekursif_inorder  rekursif_inorder.cpp  rekursif_postorder  rekursif_postorder.cpp  rekursif_preorder  rekursif_preorder.cpp
Fundamental/: CMakeLists.txt  FundamentalBinaryTree  main.cpp  readme.md  traversalIntroduction  traversal_tree.cpp
(+19 files in other folders)
