add_executable(iteratif_inorder
    iteratif_inorder.cpp
)
add_executable(iteratif_postorder
    iteratif_postorder.cpp
)
add_executable(Iteratif_Preorder
    Iteratif_Preorder.cpp
)
add_executable(rekursif_inorder
    rekursif_inorder.cpp
)
add_executable(rekursif_postorder
    rekursif_postorder.cpp
)
add_executable(rekursif_preorder
    rekursif_preorder.cpp
)